FT Romanian file language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7152 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -7,6 +7,10 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
+# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Eg in "The price is %s." %s will be replaced by the selected amount of money.
+# Thus, you need to include those %s entries into your text accordingly
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Adaugă o scurtatura catre primul 11 pe pagina cu istoria meciurilor a jucatorilor
@@ -336,7 +340,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afiseaza echipele nationale ca
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Ascunde linkul de a raspunde din cartea de oaspeti
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Ascunda linkul secretarei daca nu are nimic de raportat
 foxtrick.MyMonitor.desc=Monitorizeaza meciurile recente ale prietenilor si le adauga in Hattrickul meu
-foxtrick.MyMonitor.TeamIcons.desc=Afiseaza iconitele echipei
+foxtrick.MyMonitor.TeamIcons.desc=Afiseaza logourile echipelor
 foxtrick.MarkAllAsRead.desc=Un buton pentru a marca toate mesajele din forumuri ca citite
 foxtrick.ShowFriendlyBooked.desc=Afiseaza daca o echipa si-a programat amical pe pagina seriei
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Afiseaza amicalele doar la cerere
@@ -347,6 +351,7 @@ foxtrick.ShowLineupSet.LineupSet.desc=Evidentiaza echipele care nu si-au dat ord
 foxtrick.ShowLineupSet.Ownerless.desc=Evidentiaza echipele fara proprietar
 foxtrick.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
 foxtrick.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
+foxtrick.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
 -----------------------------------------------------------------------------
 
 
@@ -695,7 +700,7 @@ CurrentSquad=Echipa actuala
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Actiuni
 foxtrick.tweaks.writeinguestbook=Scrie in Cartea de Oaspeti
-foxtrick.tweaks.copyplayerad=Copiaza jucatorul in clipboard
+foxtrick.tweaks.copyplayerad=Copiaza jucatorul
 foxtrick.tweaks.copied=Jucatorul a fost copiat in clipboard
 
 ratings.HatStats=HatStats
@@ -706,20 +711,21 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 CopyRatings.both=Copiaza ratingurile (stil HT-ML)
-CopyRatings.home=Copiaza ratingurile echipei gazda (stil HT-ML)
-CopyRatings.away=Copiaza ratingurile echipe vizitatoare (stil HT-ML)
+CopyRatings.home=Copiaza ratingurile gazdelor (stil HT-ML)
+CopyRatings.away=Copiaza ratingurile vizitatorilor(stil HT-ML)
 CopyRatings.copied=Ratingurile au fost copiate in clipboard.
 
-CopyYouth.title=Copiaza functii juniori
 CopyYouth.trainingReport=Copiaza raportul de antrenament
 CopyYouth.trainingReport.copied=Raportul de antrenament a fost copiat.
 CopyYouth.scoutComment=Copiaza raportul cautatorului de talente.
 CopyYouth.scoutComment.copied=Raportul cautatorului de talente a fost copiat.
-CopyYouth.playerSource=Copiaza sursa HTML a jucatorului (pentru hattrick-youthclub.org)
-CopyYouth.playerSource.copied=Sursa HTML a jucatorului a fost copiata.
-CopyYouth.fixturesSource=Copiaza sursa HTML a meciurilor urmatoare.
-CopyYouth.fixturesSource.copied=Sursa HTML a meciurilor urmatoare a fost copiata.
+CopyYouth.playerSource=Copiaza sursa jucatorului
+CopyYouth.playerSource.copied=Sursa jucatorului a fost copiata.
+CopyYouth.fixturesSource=Copiaza sursa meciurilor urmatoare.
+CopyYouth.fixturesSource.copied=Sursa meciurilor urmatoare a fost copiata.
 CopyYouth.goto=Mergi la %s.
+
+CopySelected.desc=Selectie Copiere cu Ctrl+V.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 
@@ -913,6 +919,12 @@ sort.down=Down
 action.clearCache=Curata cache-ul
 action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
 
+# fennec ui
+pageAction.rightSidebar=Afisati bara dreapta
+pageAction.mainContent=Afisati continutul principal
+pageAction.leftSidebar=Afisati bara stanga
+pageAction.all=Afisati totul
+
 # buttons
 button.ok=OK
 button.cancel=Anuleaza
@@ -927,6 +939,7 @@ button.authorize=Autorizeaza
 button.export=Export
 button.import=Import
 button.restoreDefault=Restaureaza setarile implicite
+button.deleteToken=Stergere jeton
 button.disableAll=Dezactiveaza toate
 
 status.loading=Incarca…
@@ -968,7 +981,7 @@ prefs.screenshot=Screenshot
 # tabs in preferences page
 #tabs
 tab.main=Principala
-tab.on_page=Module de pagina
+tab.on_page=Module pe pagina actuala
 tab.universal=Module universale
 tab.informationAggregation=Informatii
 tab.shortcutsAndTweaks=Scurtaturi
@@ -985,13 +998,15 @@ foxtrick.prefs.basicPreferences=Preferinte de baza
 foxtrick.prefs.captionHTLanguage=Setari limba
 foxtrick.prefs.captionHTDateformat=Setari format data
 foxtrick.prefs.captionHTCountry=Setari tara
-pref.printDateFormat=Format data pentru printare
+
 foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta si importa preferinte
 foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta sau importa preferinte
 #statusbarpref
-foxtrick.prefs.labelCleanupBranch=Restaureaza setarile implicite. (doar setari implicite, nu personale. necesita restart)
+foxtrick.prefs.labelCleanupBranch=Restaureaza setarile implicite. (doar setari implicite, nu personale)
+# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
+foxtrick.prefs.labelDeleteToken=Ştergere OAuth jeton / secret pentru teamid selectate. Acest lucru va elimina accesul echipei la fişierele Hattrick CHPP numai din această copie FoxTrick. Dacă doriţi să revocati accesul FoxTrick pentru o echipă în întregime, utilizati gestionarea Hattrick CHPP de aici%.
 foxtrick.prefs.labelDisableAll=Dezactiveazate toate modulele FoxTrick
 foxtrick.prefs.labelSavePrefs=Exporta preferinte si setari personale
 foxtrick.prefs.labelSavePrefs_Prefs=Preferinte
@@ -1006,7 +1021,7 @@ foxtrick.prefs.saved=Preferinte salvate!
 foxtrick.prefs.loaded=Preferinte incarcate!
 foxtrick.prefs.dismissNotice=(click pentru a dezaproba notita)
 
-pref.xmlLoad=Incarca XML pentru informatii extra de la Hattrick
+pref.xmlLoad=Incarca XMLs pentru informatii extra de la Hattrick
 
 link.title=Linkuri
 link.homepage=Pagina de start
@@ -1021,8 +1036,7 @@ foxtrick.showReleaseNotes=Arata notele lansarii dupa updateul FoxTrick
 foxtrick.versionReleaseNotes=Arata notele lansarii pentru:
 
 about.copyright=Copyright
-about.headDevelopers=Developeri proiect
-about.projectOwners=Owneri proiect
+about.maintainers=Intretinatori
 about.developers=Developeri
 about.translators=Translatori
 about.designers=Designeri
@@ -1031,6 +1045,7 @@ prefs.view.by.category=Dupa categorii
 prefs.view.by.page=Dupa ultima pagina HT
 
 delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?
+delete_oauth_ask=Stergere OAuth jeton / secret pentru teamid %s?
 disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
 
 foxtrick.prefs.AdditionalOptions=Alte optiuni
