--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -709,7 +709,9 @@ CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
-PasteClick.desc=Auswahl mit Strg+V kopieren.
+CopySelected.desc=Auswahl mit Strg+C kopieren.
+SpecialPaste.desc=Einfügen mit Umschalt + Linksklick.
+
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
