--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -725,7 +725,7 @@ CopyYouth.fixturesSource=Copiaza sursa meciurilor urmatoare.
 CopyYouth.fixturesSource.copied=Sursa meciurilor urmatoare a fost copiata.
 CopyYouth.goto=Mergi la %s.
 
-CopySelected.desc=Selectie Copiere cu Ctrl+V.
+CopySelected.desc=Selectie Copiere cu Ctrl+C.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 
