Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7208 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -958,7 +958,7 @@ showTimeInClub=Прикажи време проведено у клубу
 sort.up=Растуће
 sort.down=Опадајуће
 action.clearCache=Обриши кеш
-action.clearCache.title=Брише Фокатрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити ѕастарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
+action.clearCache.title=Брише Фокsтрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити ѕастарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
 
 # fennec ui
 pageAction.rightSidebar=Прикажи десни бар
@@ -1032,8 +1032,9 @@ foxtrick.prefs.captionHTLanguage=Подешавање језика
 foxtrick.prefs.captionHTDateformat=Подешавање формата датума
 foxtrick.prefs.captionHTCountry=Подешавање за државу
 foxtrick.prefs.captionCleanupBranch=Сачувана подешавања
-# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=Обриши 'OAuth' токен за изабрани тим. Ово ће уклонити приступ само ове копије Фокстрика CHPP фајловима за изабрани тим на Хеттрику. Уколико желите да у потпуности укинете ауторизацију за Фокстрик, користите страницу за управљање %CHPP производима.
+foxtrick.prefs.oauth.delete=Обриши 'OAuth' токен за изабрани тим.
+# NOTE - please preserve the braces, inner content will be converted to link.
+foxtrick.prefs.oauth.delete.desc=Ово ће уклонити приступ Фокстрика CHPP фајловима за изабрани тим на Хеттрику само за овај интернет прегледник. Уколико желите да у потпуности укинете ауторизацију за Фокстрик, користите страницу за {управљање CHPP производима}.
 foxtrick.prefs.captionLoadSavePrefs=Увези или Извези подешавања
 #statusbarpref
 foxtrick.prefs.captionAlertSettings=Подешавање за обавештења
