locale de update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7209 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -989,8 +989,9 @@ foxtrick.prefs.captionHTCountry=Country
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
-# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret for the selected teamid. This will remove the teams access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's access for a team entirely, use Hattrick's CHPP management %here. 
+foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
+# NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
@@ -1029,7 +1030,7 @@ prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
 
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
-delete_oauth_ask=Delete OAuth token/secret? 
+delete_oauth_ask=Delete OAuth token/secret for teamid %s? 
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
