--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -712,7 +712,6 @@ CopyYouth.goto=Gehe zu %s
 CopySelected.desc=Auswahl mit Strg+C kopieren.
 SpecialPaste.desc=Einfügen mit Umschalt + Linksklick.
 
-
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
 foxtrick.tweaks.skilltablecopied=Der Skilltabellen-Quelltext wurde in die Zwischenablage kopiert.
@@ -990,8 +989,9 @@ foxtrick.prefs.captionHTCountry=Ländereinstellung
 foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
 foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
 foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
-# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=OAuth Token/Secret der gewählten Vereinsid löschen. Dies entfernt den Zugang des Vereins zu den Hattrick CHPP Dateien für diese Kopie von FoxTrick. Falls du FoxTricks Zugang für einen Versin vollständig löschen willst, benutze Hattricks CHPP-Management %hier. 
+foxtrick.prefs.oauth.delete=OAuth Token/Secret der gewählten Vereinsid löschen.
+# NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.labelDeleteToken=Gilt nur für diesen Browser. Um FoxTricks Zugang für einen Verein vollständig zu löschen, benutze Hattricks {CHPP-Management}. 
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
@@ -1029,7 +1029,7 @@ about.designers=Designer
 prefs.view.by.category=Nach Kategorie
 prefs.view.by.page=Nach letzter HT-Seite
 
-delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?  FireFox muss danach neu gestartet werden!
+delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?
 delete_oauth_ask=OAuth Token/Secret der Vereinsid %s löschen? 
 disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
 
