--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1064,6 +1064,8 @@ link.hattrickForum=Фокстрик форум на Хеттрику
 link.screenshots=Слике са објашњењима (English)
 link.nightlyFirefox=Тест верзија за Firefox
 link.nightlyChrome=Тест верзија за Google Chrome
+link.nightlyOpera=Тест верзија за Opera
+link.nightlySafari=Тест верзија за Safari
 link.recentChanges=Последње промене
 
 foxtrick.showReleaseNotes=Прикажи поруку о променама после ажурирања Фокстрика
