--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1013,8 +1013,10 @@ link.homepage=Homepage
 link.bugTracker=Fehler melden
 link.hattrickForum=FoxTrick-Forum bei Hattrick
 link.screenshots=Screenshots
-link.nightlyFirefox=Development builds for Firefox
-link.nightlyChrome=Development builds for Google Chrome
+link.nightlyFirefox=Development builds für Firefox
+link.nightlyChrome=Development builds für Google Chrome
+link.nightlyOpera=Development builds für Opera
+link.nightlySafari=Development builds für Safari
 link.recentChanges=Letzte Änderungen
 
 foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
