local norsk, nynorsk fix. clearified norsk to norsk, bokmal
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7259 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/nn/htlang.xml
+++ b/content/locale/nn/htlang.xml
@@ -5,7 +5,7 @@
 	<MyClub value="Klubben min" />
 	<World value="Verda" />
 	<Forum value="Forum" />
-	<Shop value="Butikk" />
+	<Shop value="Bua" />
 	<Help value="Hjelp" />
 
 	<!-- rating sublevels appearing in match detail page. copy "text" -->
