--- a/content/locale/no/htlang.xml
+++ b/content/locale/no/htlang.xml
@@ -1,4 +1,4 @@
-<language name="no" desc="Norsk">
+<language name="no" desc="Norsk, bokmål">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Mitt Hattrick" />
