fixed addImage + move-player-statement using textContent rathen than innerHTML to display eg &amp; right
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7262 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -200,7 +200,7 @@ foxtrick.SkinPlugin.desc=Hinzufügen eigener Hattrick Skins
 foxtrick.SkinPlugin.Skin1.desc=Aktivate Skin 1 (link style)
 foxtrick.SkinPlugin.Skin2.desc=Aktivate Skin 2 (link style)
 foxtrick.CurrencyConverter.desc=Umrechnung der HT-Währung
-foxtrick.MovePlayerStatement.desc=Verschiebt die Spielerkommentare zum Spielgesichter. Sind die Spielergesichter nicht aktiviert, werden die Kommentare nicht angezeigt.
+foxtrick.MovePlayerStatement.desc=Verschiebt die Spielerkommentare zum Spielerporträt. Sind die Spielerporträts nicht aktiviert, werden die Kommentare nicht angezeigt.
 foxtrick.TickerColoring.desc=Einfärben verschiedener Events im Kopf-Ticker
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Fügt weitere Linkicons zur Linkliste hinzu
