--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -887,24 +887,24 @@ ticker.type.myht=رسالة هاتريك الخاصة بي
 ticker.type.others=أخرى
 
 # LocalTime
-LocalTime.hattrick=Hattrick time
-LocalTime.hattrick.title=Time in Hattrick time zone. Click the clock to switch to local time.
-LocalTime.local=Local time
-LocalTime.local.title=Time in local time zone. Click the clock to switch to Hattrick time.
+LocalTime.hattrick=توقيت هاتريك
+LocalTime.hattrick.title=الوقت بتوقيت هاتريك. انقر على الساعة للتغيير إلى التوقيت المحلي
+LocalTime.local=التوقيت المحلي
+LocalTime.local.title=الوقت بالتوقيت المحلي. انقر على الساعة للتغيير إلى توقيت هاتريك
 
 #actions
-Copy=Copy
-View=View
-Switch_view=Switch view
-Detach=Detach
-AddHomegrown=Add homegrown players
-RemoveBotPlayers=Remove bot players
-showTimeInClub=Show time in club
-Filter=Filter
-sort.up=Up
-sort.down=Down
-action.clearCache=Clear cache
-action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
+Copy=نسخ
+View=عرض
+Switch_view=تغيير نمط العرض
+Detach=فصل
+AddHomegrown=إضافة اللاعبين الناشئين في الفريق
+RemoveBotPlayers=إزالة لاعبي فرق الكمبيوتر
+showTimeInClub=إظهار الوقت في النادي
+Filter=مصفي
+sort.up=أعلى
+sort.down=أسفل
+action.clearCache=مسح الذاكرة المؤقتة
+action.clearCache.title=يقوم بمسح الذاكرة المؤقتة. يقوم البرنامج بتحميل ملفات إضافية من سيرفرات هاتريك حسب الطلب. إلى أن تقوم بإغلاق البرنامج يتم إستخدام تلك الملفات في كل وقت إلا أن هذه الملفات قد تصبح قديمة في حالات نادرة. قم بمسح الذاكرة المؤقتة إذا كنت تريد البرنامج أن يقوم بتحميل تلك الملفات مجددا.
 
 
 
@@ -913,38 +913,38 @@ action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra in
 
 
 # buttons
-button.ok=OK
-button.cancel=Cancel
-button.close=Close
-button.customize=Customize
-button.save=Save
-button.go=Go!
-button.add=Add
-button.remove=Remove
-button.top=Top
-button.authorize=Authorize
-button.export=Export
-button.import=Import
-button.restoreDefault=Restore default
-button.deleteToken=Delete token
-button.disableAll=Disable all
+button.ok=حسنا
+button.cancel=إلغاء
+button.close=إغلاق
+button.customize=تخصيص
+button.save=حفظ
+button.go=اذهب!
+button.add=إضافة
+button.remove=إزالة
+button.top=أعلى
+button.authorize=تخويل
+button.export=تصدير
+button.import=استيراد
+button.restoreDefault=تعيين الإفتراضيات
+button.deleteToken=حذف الرمز
+button.disableAll=تعطيل الكل
 
-status.loading=Loading…
+status.loading=تحميل…
 status.loading.abbr=…
-status.error=Error
+status.error=خطأ
 status.error.abbr=!
-status.unknown=Unknown
+status.unknown=غير معروف
 status.unknown.abbr=?
 
-oauth.authorize=Authorize FoxTrick to access your team data
-oauth.instructions=A link to chpp.hattrick.org will appear below shortly.\nOpen the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data.\nFoxTrick will not know your password in the whole process.
-oauth.why=Why should I authorize FoxTrick?
-oauth.link=Get verification code from chpp.hattrick.org
-oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
+oauth.authorize=قم بإعطاء البرنامج الصلاحية للوصول إلى معلومات فريقك
+oauth.instructions=سيظهر رابط في الأسفل خلال وقت قصير وهو موقع هاتريك الذي ستتمكن من خلاله إعطاء الصلاحية للبرنامج للوصول إلى معلومات فريقك. أدخل إسم تسجيل الدخول وكلمة السر الخاصة بك للحصول على رمز التأكيد ثم قم بنسخ الرمز إلى الحقل الموجود أدناه حتى تعطي الصلاحية للبرنامج ليتمكن من الوصول إلى معلومات فريقك. هذه العملية آمنة بشكل كامل ولن يتم إعطاء كلمة السر الخاصة بك إلى البرنامج.
+oauth.why=لماذا يجب علي إعطاء الصلاحية للبرنامج؟
+oauth.link=أحصل على رمز التأكيد من موقع هاتريك.
+oauth.success=تم إعطاء الصلاحية للبرنامج بنجاح! الرجاء تحديث هذه الصفحة لتشغيل البرنامج بشكل كامل.
 
-api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
+api.failure=لم يتم الوصول إلى معلومات هاتريك. ينبغي عليك تخويل البرنامج ليتمكن من الوصول إلى معلوماتك وإذا كنت قد قمت بذلك فعلا فتحقق من إتصالك الشبكي أو حاول مجددا في وقت لاحق.
 
-exception.error=Error %s
+exception.error=خطأ %s
 
 # End of IN-GAME STRINGS.
 
@@ -953,51 +953,51 @@ exception.error=Error %s
 # Captions and labels of foxtrick preferences
 
 foxtrick=FoxTrick
-preferences=Preferences
-foxtrick.prefs.preferences=FoxTrick Preferences
-foxtrick.log.header=FoxTrick Log
+preferences=التفضيلات
+foxtrick.prefs.preferences=تفضيلات FoxTrick
+foxtrick.log.header=سجل FoxTrick
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
-status.active=active
-status.enabled=enabled, but not active on %s
-status.disabled=disabled
+status.active=مفعل
+status.enabled=يعمل ولكن غير مفعل في %s
+status.disabled=معطل
 
-prefs.screenshot=Screenshot
+prefs.screenshot=صورة من الشاشة
 
 # tabs in preferences page
 #tabs
-tab.main=Main
-tab.on_page=Modules on this page
-tab.universal=Universal modules
-tab.informationAggregation=Information Aggregation
-tab.shortcutsAndTweaks=Shortcuts and Tweaks
-tab.presentation=Presentation
-tab.matches=Matches
-tab.forum=Forum
-tab.links=Links
-tab.alert=Alert
-tab.about=About
-tab.changes=Changes
-tab.help=Help
+tab.main=عام
+tab.on_page=وحدات هذه الصفحة
+tab.universal=وحدات عامة
+tab.informationAggregation=تجمع المعلومات
+tab.shortcutsAndTweaks=الإختصارات
+tab.presentation=العرض
+tab.matches=المباريات
+tab.forum=المنتدى
+tab.links=الروابط
+tab.alert=التنبيه
+tab.about=حول
+tab.changes=التغييرات
+tab.help=مساعدة
 
-foxtrick.prefs.basicPreferences=Basic Preferences
-foxtrick.prefs.captionHTLanguage=Language
-foxtrick.prefs.captionHTDateformat=Date format
-foxtrick.prefs.captionHTCountry=Country
+foxtrick.prefs.basicPreferences=التفضيلات الأساسية
+foxtrick.prefs.captionHTLanguage=اللغة
+foxtrick.prefs.captionHTDateformat=صيغة التاريخ
+foxtrick.prefs.captionHTCountry=البلد
 
-foxtrick.prefs.captionCleanupBranch=Stored preferences
-foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
-foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
-foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
+foxtrick.prefs.captionCleanupBranch=التفضيلات المخزنة
+foxtrick.prefs.captionLoadSavePrefs=استيراد أو تصدير التفضيلات
+foxtrick.prefs.labelCleanupBranch=إعادة تعيين التفضيلات الإفتراضية
+foxtrick.prefs.oauth.delete=إزالة التخويل من الفريق المختار.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
-foxtrick.prefs.labelDisableAll=Disable all modules
-foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
-foxtrick.prefs.labelSavePrefs_Prefs=Preferences
-foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Templates, custom links, and transfer filters)
-foxtrick.prefs.saveNotice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
-foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences will be overwritten)
+foxtrick.prefs.oauth.delete.desc=ينطبق على هذا المستعرض فقط. لإزالة ترخيص البرنامج في الفريق الرجاء إستخدام صفحة هاتريك في {إدارة CHPP}
+foxtrick.prefs.labelDisableAll=تعطيل كل الوحدات
+foxtrick.prefs.labelSavePrefs=تصدير التفضيلات أو الإعدادات الشخصية
+foxtrick.prefs.labelSavePrefs_Prefs=التفضيلات
+foxtrick.prefs.labelSavePrefs_Notes=الإعدادت الشخصية (القوالب والروابط المخصصة ومصفيات الإنتقالات)
+foxtrick.prefs.saveNotice=نسخ المحتويات في خانة النص ثم الحفظ كملف حتى تتمكن من استيراد التفضيلات في المستقبل.
+foxtrick.prefs.labelLoadPrefs=استيراد التفضيلات (سوف يتم إلغاء التفضيلات الحالية)
 foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Import" to import your preferences.
 foxtrick.prefs.captionDisableSettings=Disable FoxTrick
 foxtrick.prefs.stagepref=Disable on Stage server
