Russian translation update to r7274
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7275 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 ﻿# ru-RU (Russian language file)
-# based on MASTER language file r7146
+# based on MASTER language file r7248
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -709,7 +709,8 @@ CopyYouth.fixturesSource=Скопировать исходный код стра
 CopyYouth.fixturesSource.copied=Исходный код страницы был скопирован в буфер обмена.
 CopyYouth.goto=Перейти к %s
 
-CopySelected.desc=Скопируйте выбранное с помощью Ctrl+C.
+CopySelected.desc=Скопируйте выбранное с помощью Ctrl + C.
+SpecialPaste.desc=Вставьте с помощью Shift + Левая кнопка мыши.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Скопировать таблицу навыков в буфер обмена (в формате HT-ML)
@@ -988,8 +989,9 @@ foxtrick.prefs.captionHTCountry=Страна
 foxtrick.prefs.captionCleanupBranch=Сохранённые настройки
 foxtrick.prefs.captionLoadSavePrefs=Импорт и экспорт настроек
 foxtrick.prefs.labelCleanupBranch=Восстановить настройки FoxTrick по умолчанию (только настройки, не трогая личные данные)
-# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=Удалить OAuth-пару ключ/шифр для выделенной команды. Это удалит доступ этой копии Foxtrick-а (на данной машине) к CHPP-данным команды. Если Вы хотите совсем отозвать доступ FoxTrick-а к данным команды, используйте управление приложениями CHPP Hattrick-а.
+foxtrick.prefs.oauth.delete=Удалить OAuth-пару ключ/шифр для выделенной команды.
+# NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.oauth.delete.desc=Сработает только для этой инсталляции браузера. Для отзыва доступа FoxTrick'а к данным команды используйте настройки {приложений CHPP}.
 foxtrick.prefs.labelDisableAll=Отключить все модули
 foxtrick.prefs.labelSavePrefs=Экспорт настроек и/или личных данных
 foxtrick.prefs.labelSavePrefs_Prefs=Настройки
@@ -1013,6 +1015,8 @@ link.hattrickForum=Форум FoxTrick на сайте Hattrick
 link.screenshots=Снимки экрана
 link.nightlyFirefox=Промежуточные сборки для Firefox
 link.nightlyChrome=Промежуточные сборки для Google Chrome
+link.nightlyOpera=Промежуточные сборки для Opera
+link.nightlySafari=Промежуточные сборки для Safari
 link.recentChanges=Последние изменения
 
 foxtrick.showReleaseNotes=Показывать информацию о выпуске после обновления FoxTrick
