--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -998,46 +998,45 @@ foxtrick.prefs.labelSavePrefs_Prefs=التفضيلات
 foxtrick.prefs.labelSavePrefs_Notes=الإعدادت الشخصية (القوالب والروابط المخصصة ومصفيات الإنتقالات)
 foxtrick.prefs.saveNotice=نسخ المحتويات في خانة النص ثم الحفظ كملف حتى تتمكن من استيراد التفضيلات في المستقبل.
 foxtrick.prefs.labelLoadPrefs=استيراد التفضيلات (سوف يتم إلغاء التفضيلات الحالية)
-foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Import" to import your preferences.
-foxtrick.prefs.captionDisableSettings=Disable FoxTrick
-foxtrick.prefs.stagepref=Disable on Stage server
-foxtrick.prefs.disableTemporaryLabel=Disable temporarily
-foxtrick.prefs.saved=Preferences saved!
-foxtrick.prefs.loaded=Preferences loaded!
-foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+foxtrick.prefs.loadNotice=قم بنسخ تفضيلاتك المخزنة في صندوق النص ثم اضغط على (استيراد) لاستيراد تفضيلاتك.
+foxtrick.prefs.captionDisableSettings=تعطيل FoxTrick
+foxtrick.prefs.stagepref=تعطيل في سيرفر Stage
+foxtrick.prefs.disableTemporaryLabel=تعطيل مؤقت
+foxtrick.prefs.saved=تم حفظ التفضيلات!
+foxtrick.prefs.loaded=تم تحميل التفضيلات!
+foxtrick.prefs.dismissNotice=(انقر لإخفاء هذه الرسالة)
 
-pref.xmlLoad=Load XMLs for extra information from Hattrick
+pref.xmlLoad=تحميل ملفات إضافية من هاتريك
 
-link.title=Links
-link.homepage=Homepage
-link.bugTracker=Report a bug
-link.hattrickForum=FoxTrick forum at Hattrick
-link.screenshots=Screenshots
-link.nightlyFirefox=Development builds for Firefox
-link.nightlyChrome=Development builds for Google Chrome
-link.nightlyOpera=Development builds for Opera
-link.nightlySafari=Development builds for Safari
-link.recentChanges=Recent changes
+link.title=الروابط
+link.homepage=الصفحة الرئيسية
+link.bugTracker=التبليغ عن خلل
+link.hattrickForum=منتدى البرنامج في هاتريك
+link.screenshots=صور من الشاشة
+link.nightlyFirefox=بناء تطويري في Foxtrick
+link.nightlyChrome=بناء تطويري في Google Chrome
+link.nightlyOpera=بناء تطويري في Opera
+link.nightlySafari=بناء تطويري في Safari
+link.recentChanges=التغييرات الأخيرة
 
-foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
-foxtrick.versionReleaseNotes=Show release notes for:
+foxtrick.showReleaseNotes=إظهار ملاحظات الإصدارات بعد تحديث FoxTrick
+foxtrick.versionReleaseNotes=إظهار ملاحظات الإصدارات في:
 
-about.copyright=Copyright
-about.maintainers=Maintainers
-about.developers=Developers
-about.translators=Translators
-about.designers=Designers
+about.copyright=حقوق النشر
+about.maintainers=فريق العمل
+about.developers=المبرمجون
+about.translators=المترجمون
+about.designers=المصممون
 
-prefs.view.by.category=View by category
-prefs.view.by.page=View by last HT page
+prefs.view.by.category=عرض حسب الفئة
+prefs.view.by.page=عرض حسب آخر صفحة في هاتريك
 
-delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
-delete_oauth_ask=Delete OAuth token/secret for teamid %s? 
-disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
+delete_foxtrick_branches_ask=هل أنت متأكد من أنك تود إعادة تعيين الإعدادت إلى الإفتراضية؟
+delete_oauth_ask=إلغاء التخويل في فريق %s?
+disable_all_foxtrick_modules_ask=هل أنت متأكد من أنك تود تعطيل كل الوحدات؟
 
-foxtrick.prefs.AdditionalOptions=Additional options
-foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
-foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
-
+foxtrick.prefs.AdditionalOptions=خيارات إضافية
+foxtrick.prefs.smallcopyicons=إظهار أزرار النسخ في العنوان بدلا من القضيب
+foxtrick.prefs.DisplayHTMLDebugOutput=إظهار سجل البرنامج في أسفل الصفحة
 
 ###EOF
