setting locale direction in all foxtrick.properties
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7318 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded DANISH MASTER
 # By  05erth (1499168), LasseSvendsen (403068)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Gør det muligt at ændre indlæg i konferencen til skabeloner der kan bruges senere
