--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -9,6 +9,9 @@
 # sentences starting with # are comments. leave them unchanged
 
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=rtl
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=افزودن پيودني به صفحه چيدمان مسابقات در صفحه ارشيو مسابقات
