--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded fi-FI
 # By Pyntsa (554581), Leachey (259106)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Lisää suoran oikopolun pelatun ottelun kokoonpanoon pelaajan sivulle
