--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded fr-FR
 # By Stephan57 [TeamId=1751312] / checked till r4682
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Ajoute un raccourci vers la composition de l'èquipe à la page des détails des joueurs.
