--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded hr-HR locale
 # By damyr (883271)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Dodati prečicu do postave na osobnoj stranici igrača
