--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded it-IT language file
 # By Caracca, Sam-Vimes, taised
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Aggiunge un link diretto alla formazione delle partite nella pagina del giocatore
