--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded pt-PT language file
 # By ei04004 (6307374), McTripas (735654) _recluso_ (738571), MEO_Comandante (9469076)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Permite transformar mensagens do fórum em templates para uso posterior
