--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded uk-UA
 # Edited by Grif_07 [teamid=527635]
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Дозволяє зберегти повідомлення з форуму до шаблону для подальшого використання
