--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -11,6 +11,9 @@
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=rtl
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=إضافة إختصار إلى التشكيلة في تاريخ مباريات اللاعب
