--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded bg-BG locale
 # By poceh_b (664763 )
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Allows turning forum posts into templates for later use
