--- a/content/locale/fy/foxtrick.properties
+++ b/content/locale/fy/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded FRYSK LOCALE
 # submitted by -Foppe
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=						Soarget foar opslaan fan foarumberjochten as templates om letter te brûken
