--- a/content/locale/gr/foxtrick.properties
+++ b/content/locale/gr/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded GREEK MASTER
 # By gttwins (900949)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Επιτρέπει την μετατροπή ενός μηνύματος διάσκεψης σε πρότυπο για μετέπειτα χρήση.
