--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded
 # By
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Adds a direct shortcut to lineup on player's detail page
