--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -10,6 +10,9 @@
 # sentences starting with # are comments. leave them unchanged
 
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Bæta við flýtileið fyrir liðsuppstillingu á leikjasögu leikmanns
