--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded lb-LU locale
 # By Mod-Karlthegreat (TeamID: 463282) / checked till r2325
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=En direkte Link op d'Opstellung op de Spillersäiten dobäisetzen.
