--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded Malti
 # By LA-saviour26 (4149232)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Iżid shortcut diretta għall-formazzjoni fuq il-paġna bid-dettalji tal-plejer
