--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded nb-NO locale
 # By Skoglund (1075193)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Tillat omgjøring fra forumpost til mal for senere bruk
