--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded pl-PL
 # Edited by Homzik [teamid=79468] & SilesiaVratislavia [teamid=1816889]
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Dodaje skrót do ustawienia meczowego na stronie zawodnika
