--- a/content/locale/pt_BR/foxtrick.properties
+++ b/content/locale/pt_BR/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded pt-BR language file
 # By MarceloFBrandao
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Permite transformar mensagens do fórum em templates para uso posterior
