--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -12,6 +12,9 @@
 # Eg in "The price is %s." %s will be replaced by the selected amount of money. 
 # Thus, you need to include those %s entries into your text accordingly
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Додаје директан линк ка постави на страници играча.
