--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -2,6 +2,9 @@
 # utf-8 encoded ENGLISH MASTER
 # By Developers
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Thêm đường dẫn trực tiếp đến đội hình ở trang thông tin cầu thủ
