--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -3,6 +3,9 @@
 #  Original by eekels  [teamid=768188] (r4899)
 # Additions by CoRrRan [teamid=144536] (r7205)
 
+#declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Toon een directe snelkoppeling op de spelerspagina, onder het kopje Wedstrijdarchief, naar de opstellingspagina
