Russian translation update. Minor bugfix.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7336 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -891,9 +891,9 @@ ticker.type.others=Другое
 
 # LocalTime
 LocalTime.hattrick=Время Hattrick
-LocalTime.hattrick.title=Показано время в часовом поясе Hattrick. Нажмите на часы для переключение на местное время.
+LocalTime.hattrick.title=Показано время в часовом поясе Hattrick. Нажмите на часы для переключения на местное время.
 LocalTime.local=Местное время
-LocalTime.local.title=Показано местное время. Нажмите на часы для переключение на время Hattrick.
+LocalTime.local.title=Показано местное время. Нажмите на часы для переключения на время Hattrick.
 
 #actions
 Copy=Скопировать
